--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@types/aos": "^3.0.7",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "particles.js": "^2.0.0",
     "primeicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^12.0.2",
     "tslib": "^2.3.0",
+    "typed.js": "^2.1.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
